src/test/ui/issues/issue-32222.stderr
error: compilation successful
  --> $DIR/issue-32222.rs:34:1
   |
LL | fn main() {} //~ ERROR compilation successful
   | ^^^^^^^^^^^^

error: aborting due to previous error

